# PyThermoFlash

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
docs/: docs.md  example1.md  example2.md  example3.md  index.md
examples/: bubble-point-pressure.py  bubble-point-temperature.py  dew-point-pressure.py  dew-point-temperature.py  exp0.py  flash-isothermal.py  model_source.py  model_source_1.py  reference_content_0.py  test1.py  test3-1.py  test3.py  utils.py
pyThermoFlash/: __init__.py  app.py
pyThermoFlash/config/: __init__.py  constants.py  setting.py
pyThermoFlash/core/: __init__.py  main.py
pyThermoFlash/docs/: __init__.py  activity.py  equilibria.py  estimation.py  flashcore.py  lle.py  mixtures.py  source.py  vle.py
pyThermoFlash/models/: __init__.py  flash.py
pyThermoFlash/utils/: __init__.py  component_utils.py  display.py  result_manager.py  tools.py
tests/: activity.py  test1.py  test2.py  test3.py  thermodb_config_link.yml  vle.py
