[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyThermoFlash"
version = "0.1.7"
description = "PyThermoFlash is a powerful and user-friendly computational tool tailored for engineers, researchers, and scientists working with thermodynamic systems. It specializes in performing bubble-point, dew-point, and flash calculations, which are essential for determining the equilibrium state of mixtures under specified conditions. With support for various thermodynamic models, PyThermoFlash ensures accurate predictions of phase behavior and properties for complex fluid systems."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "Sina Gilassi", email = "sina.gilassi@gmail.com"}
]
keywords = [
    'chemical-engineering',
    'equation-of-state',
    'thermodynamics',
    'thermodynamic-models',
    'flash-calculations',
    'equilibrium',
    'vle-calculations',
    'raoult-law',
    'phase-equilibrium',
    'dew-point-calculation',
    'bubble-point-calculation',
    'vapor-liquid-equilibrium',
    'NRTL',
    'UNIQUAC',
    'SRK',
    'PR',
    'RK',
    'vdW'
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3.11",
    "Operating System :: Unix",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "numpy>=2.3.5",
    "scipy>=1.16.3",
    "pycuc>=2.1.0",
    "pydantic>=2.12.4",
    "pythermodb>=1.11.53",
    "pythermodb-settings>=0.1.9",
    "pydantic-settings>=2.12.0",
    "pythermolinkdb>=1.3.11",
    "pythermomodels>=1.5.6",
]

[project.optional-dependencies]
dev = [
    "psutil>=7.1.3"
]

[tool.uv]
dev-dependencies = [
    "psutil>=7.1.3"
]

[project.urls]
Homepage = "https://github.com/sinagilassi/PyThermoFlash"
Documentation = "https://pythermoflash.readthedocs.io/en/latest/"
Source = "https://github.com/sinagilassi/PyThermoFlash"
Tracker = "https://github.com/sinagilassi/PyThermoFlash/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = [
    "tests",
    "tests.*",
    "examples",
    "examples.*",
    "notebooks",
    "notebooks.*",
    "statics",
    "statics.*",
    "private",
    "private.*",
    "app",
    "app.*",
    "docs",
    "docs.*"
]

[tool.setuptools.package-data]
pyThermoFlash = [
    'config/*.yml',
    'config/*.csv',
    'data/*.csv',
    'data/*.yml',
    'plugin/*.yml',
    'plugin/*.csv',
    'templates/*.html',
    'static/*'
]
